examples/smlfmt-1.2.0/test/fail/bad-functions.sml
fun 'a fact = 0
  | fac = n * fact (n-1)
